--- a/.github/workflows/submodules.yaml
+++ b/.github/workflows/submodules.yaml
@@ -20,8 +20,12 @@ jobs:
       - name: Update submodules
         run: git submodule update --remote
 
-      - name: Commit and push changes
+      - name: Commit and Push changes
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add . && git commit -m "Updated submodules" && git push
+          if [ -n "$(git status --porcelain)" ]; then
+            git config --global user.name 'github-actions[bot]'
+            git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+            git add . && git commit -m "Updated submodules" && git push
+          else
+            echo "No changes to commit"
+          fi
